; ModuleID = '/home/carl/AnghaBench/linux/drivers/dma/extr_pch_dma.c_pd_issue_pending.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/dma/extr_pch_dma.c_pd_issue_pending.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dma_chan = type { i32 }
%struct.pch_dma_chan = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dma_chan*)* @pd_issue_pending to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pd_issue_pending(%struct.dma_chan* %0) #0 {
  %2 = alloca %struct.dma_chan*, align 8
  %3 = alloca %struct.pch_dma_chan*, align 8
  store %struct.dma_chan* %0, %struct.dma_chan** %2, align 8
  %4 = load %struct.dma_chan*, %struct.dma_chan** %2, align 8
  %5 = call %struct.pch_dma_chan* @to_pd_chan(%struct.dma_chan* %4)
  store %struct.pch_dma_chan* %5, %struct.pch_dma_chan** %3, align 8
  %6 = load %struct.pch_dma_chan*, %struct.pch_dma_chan** %3, align 8
  %7 = call i64 @pdc_is_idle(%struct.pch_dma_chan* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %18

9:                                                ; preds = %1
  %10 = load %struct.pch_dma_chan*, %struct.pch_dma_chan** %3, align 8
  %11 = getelementptr inbounds %struct.pch_dma_chan, %struct.pch_dma_chan* %10, i32 0, i32 0
  %12 = call i32 @spin_lock(i32* %11)
  %13 = load %struct.pch_dma_chan*, %struct.pch_dma_chan** %3, align 8
  %14 = call i32 @pdc_advance_work(%struct.pch_dma_chan* %13)
  %15 = load %struct.pch_dma_chan*, %struct.pch_dma_chan** %3, align 8
  %16 = getelementptr inbounds %struct.pch_dma_chan, %struct.pch_dma_chan* %15, i32 0, i32 0
  %17 = call i32 @spin_unlock(i32* %16)
  br label %18

18:                                               ; preds = %9, %1
  ret void
}

declare dso_local %struct.pch_dma_chan* @to_pd_chan(%struct.dma_chan*) #1

declare dso_local i64 @pdc_is_idle(%struct.pch_dma_chan*) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @pdc_advance_work(%struct.pch_dma_chan*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
